# marknote

./: CLAUDE.md  README.md  README_EN.md  index.html  package.json  uno.config.ts  vite.config.ts
docs/plans/: 2026-03-25-ai-assistants-design.md
scripts/: sync-version.js
src/: App.vue  main.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs
src/components/: BlockMenuPopover.vue
src/components/Assistant/: AssistantEditor.vue
src/components/Editor/: MilkdownEditor.vue  TiptapEditor.vue  VditorEditor.vue
src/components/Editor/extensions/: SlashCommandExtension.ts  SlashCommandList.vue
src/components/Search/: SearchPage.vue
src/components/Settings/: Settings.vue
src/components/Sidebar/: NoteList.vue  SearchBar.vue  Sidebar.vue
src/components/TitleBar/: TitleBar.vue
src/composables/: useAutoSave.ts  useFileSystem.ts  useGlobalShortcut.ts  useShortcuts.ts  useSourceMode.ts  useTheme.ts  useVersionCheck.ts
src/stores/: assistantsStore.ts  dialogStore.ts  noteStore.ts  settingStore.ts
src/styles/: base.css
src/types/: note.ts
